--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/csurf": "^1.11.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "nodemon": "^3.1.0",
